--- a/packages/SystemUI/res/values-tr/strings.xml
+++ b/packages/SystemUI/res/values-tr/strings.xml
@@ -157,7 +157,9 @@
     <skip />
     <!-- no translation found for quick_settings_airplane_mode_label (5510520633448831350) -->
     <skip />
-    <!-- no translation found for quick_settings_battery_label (2764511189368020794) -->
+    <!-- no translation found for quick_settings_battery_charging_label (490074774465309209) -->
+    <skip />
+    <!-- no translation found for quick_settings_battery_charged_label (8865413079414246081) -->
     <skip />
     <!-- no translation found for quick_settings_bluetooth_label (6304190285170721401) -->
     <skip />
