--- a/packages/SystemUI/res/values-bg/strings.xml
+++ b/packages/SystemUI/res/values-bg/strings.xml
@@ -157,13 +157,15 @@
     <skip />
     <!-- no translation found for quick_settings_airplane_mode_label (5510520633448831350) -->
     <skip />
-    <!-- no translation found for quick_settings_battery_label (2764511189368020794) -->
+    <!-- no translation found for quick_settings_battery_charging_label (490074774465309209) -->
+    <skip />
+    <!-- no translation found for quick_settings_battery_charged_label (8865413079414246081) -->
     <skip />
     <!-- no translation found for quick_settings_bluetooth_label (6304190285170721401) -->
     <skip />
     <!-- no translation found for quick_settings_brightness_label (6968372297018755815) -->
     <skip />
-    <!-- no translation found for quick_settings_ime_label (6877325300716130498) -->
+    <!-- no translation found for quick_settings_ime_label (7073463064369468429) -->
     <skip />
     <!-- no translation found for quick_settings_location_label (3292451598267467545) -->
     <skip />
