Remove trailing period from missing SIM string
Fixes bug 6719893

Change-Id: I551da914baeeabe4a048855aa937ac3a5dcbb904

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -2100,7 +2100,7 @@
     <string name="lockscreen_low_battery">Connect your charger.</string>
 
     <!-- Shown in the lock screen when there is no SIM card. -->
-    <string name="lockscreen_missing_sim_message_short">No SIM card.</string>
+    <string name="lockscreen_missing_sim_message_short">No SIM card</string>
     <!-- Shown in the lock screen when there is no SIM card. -->
     <string name="lockscreen_missing_sim_message" product="tablet">No SIM card in tablet.</string>
     <!-- Shown in the lock screen when there is no SIM card. -->
